force-app/main/default/objects/Visit/Visit.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>