force-app/main/default/objects/Visit/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <formula>TEXT(Account.Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area</label>
    <type>Text</type>
</CustomField>