force-app/main/default/objects/Visit/fields/Customer_Retention__c.field-meta.xml
<CustomField>
    <fullName>Customer_Retention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Retention</label>
    <type>Checkbox</type>
</CustomField>