force-app/main/default/objects/Visit/fields/Customer_Retention_Notes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Retention_Notes__c</fullName>
    <label>Customer Retention Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>