force-app/main/default/objects/Visit/fields/Dealership_Processes__c.field-meta.xml
<CustomField>
    <fullName>Dealership_Processes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealership Processes</label>
    <type>Checkbox</type>
</CustomField>