force-app/main/default/objects/Visit/fields/Dealership_Processes_Notes__c.field-meta.xml
<CustomField>
    <fullName>Dealership_Processes_Notes__c</fullName>
    <label>Dealership Processes Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>