force-app/main/default/objects/Visit/fields/Dealership_Staffing__c.field-meta.xml
<CustomField>
    <fullName>Dealership_Staffing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealership Staffing</label>
    <type>Checkbox</type>
</CustomField>