force-app/main/default/objects/Visit/fields/Dept_Profit_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Dept_Profit_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dept. Profit Analysis</label>
    <type>Checkbox</type>
</CustomField>