force-app/main/default/objects/Visit/fields/Dept_Profit_Analysis_Notes__c.field-meta.xml
<CustomField>
    <fullName>Dept_Profit_Analysis_Notes__c</fullName>
    <label>Dept. Profit Analysis Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>