force-app/main/default/objects/Visit/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <formula>TEXT(Account.District__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>District</label>
    <type>Text</type>
</CustomField>