force-app/main/default/objects/Visit/fields/Inventory_Notes__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Notes__c</fullName>
    <label>Inventory Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>