force-app/main/default/objects/Visit/fields/Marketing_Review__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Review</label>
    <type>Checkbox</type>
</CustomField>