force-app/main/default/objects/Visit/fields/Marketing_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Review_Notes__c</fullName>
    <label>Marketing Review Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>