force-app/main/default/objects/Visit/fields/New_Sales_Processes__c.field-meta.xml
<CustomField>
    <fullName>New_Sales_Processes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Sales Processes</label>
    <type>Checkbox</type>
</CustomField>