force-app/main/default/objects/Visit/fields/New_Sales_Processes_Notes__c.field-meta.xml
<CustomField>
    <fullName>New_Sales_Processes_Notes__c</fullName>
    <label>New Sales Processes Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>