force-app/main/default/objects/Visit/fields/Other_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Notes__c</fullName>
    <label>Other Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>