force-app/main/default/objects/Visit/fields/Parts_Collision__c.field-meta.xml
<CustomField>
    <fullName>Parts_Collision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parts &amp; Collision</label>
    <type>Checkbox</type>
</CustomField>