force-app/main/default/objects/Visit/fields/Parts_Collision_Notes__c.field-meta.xml
<CustomField>
    <fullName>Parts_Collision_Notes__c</fullName>
    <label>Parts &amp; Collision Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>