force-app/main/default/objects/Visit/fields/Profit_Retention__c.field-meta.xml
<CustomField>
    <fullName>Profit_Retention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profit Retention</label>
    <type>Checkbox</type>
</CustomField>