force-app/main/default/objects/Visit/fields/Profit_Retention_Notes__c.field-meta.xml
<CustomField>
    <fullName>Profit_Retention_Notes__c</fullName>
    <label>Profit Retention Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>