force-app/main/default/objects/Visit/fields/Reception_MPI__c.field-meta.xml
<CustomField>
    <fullName>Reception_MPI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reception/MPI</label>
    <type>Checkbox</type>
</CustomField>