force-app/main/default/objects/Visit/fields/Reception_MPI_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reception_MPI_Notes__c</fullName>
    <label>Reception/MPI Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>