force-app/main/default/objects/Visit/fields/Repair_Flow__c.field-meta.xml
<CustomField>
    <fullName>Repair_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repair Flow</label>
    <type>Checkbox</type>
</CustomField>