force-app/main/default/objects/Visit/fields/Repair_Flow_Notes__c.field-meta.xml
<CustomField>
    <fullName>Repair_Flow_Notes__c</fullName>
    <label>Repair Flow Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>