force-app/main/default/objects/Visit/fields/Traffic_Generation__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Generation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Traffic Generation</label>
    <type>Checkbox</type>
</CustomField>