force-app/main/default/objects/Visit/fields/Traffic_Generation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Generation_Notes__c</fullName>
    <label>Traffic Generation Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>