force-app/main/default/objects/Visit/fields/Used_Sales_Processes__c.field-meta.xml
<CustomField>
    <fullName>Used_Sales_Processes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used Sales Processes</label>
    <type>Checkbox</type>
</CustomField>