force-app/main/default/objects/Visit/fields/Used_Sales_Processes_Notes__c.field-meta.xml
<CustomField>
    <fullName>Used_Sales_Processes_Notes__c</fullName>
    <label>Used Sales Processes Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>