force-app/main/default/objects/Visit/fields/Visitor__c.field-meta.xml
<CustomField>
    <fullName>Visitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visitor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>